<resources>
    <string name="app_name">Saydalyty</string>
    <string name="not_have_an_account_create_new">Not have any account, create new ?</string>
    <string name="error_logging_in">Error during logging in, try again ?</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="error_username">Username is required</string>
    <string name="password_error">Password is required</string>
    <string name="already_have_an_account_login">Already have an account, log in ?</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="customer_phone">Phone Number</string>
    <string name="email"> E-mail (Optional)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account">Create a new account</string>
    <string name="firstname_error">Firstname is required</string>
    <string name="password_match_error">Password mismatch</string>
    <string name="username">Username</string>
    <string name="error_phone">Phone Number is required</string>
    <string name="password_length_error">Password must not be less than 8 characters</string>
    <string name="error_sign_up">Error during signing up, try again ?</string>
    <string name="error_phone_eleven">Phone number must not be more or less than 11 characters</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="log_in">Log In</string>
    <string name="guest_mode">Guest mode</string>
    <string name="not_available_sliders">No current ads</string>
    <string name="error_loading_categories">Error during loading categories, try again ?</string>
    <string name="error">Error</string>
    <string name="next">Next</string>
    <string name="pass">Pass</string>
    <string name="welcome">Welcome to Saydalyty App</string>
    <string name="start_healthy_journey">Start your healthy journey through documented information and medication doses</string>
    <string name="delivery_feature">Receive your medications directly through delivery service</string>
    <string name="find_feature">Find medications easily and how to be used</string>
    <string name="app_feature">Control your healthy journey through easy navigation in the app</string>
    <string name="about">About</string>
    <string name="my_addresses">My Addresses</string>
    <string name="edit">Edit</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favorites">Favorites</string>
    <string name="my_wallet">My Wallet</string>
    <string name="points_of_reward">Points of reward</string>
    <string name="common_questions">Medical consultation</string>
    <string name="change_language">Change Language</string>
    <string name="log_out">Log Out</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_logout">Are you sure you want to logout ?</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="bag">Bag</string>
    <string name="my_account">My Account</string>
    <string name="cart_is_empty">Bag is empty</string>
    <string name="no_products_added_to_the_cart_yet">No Products added to the bag yet.</string>
    <string name="add">Add</string>
    <string name="confirm_language">Are you sure you want to change the current language ?</string>
    <string name="confirm">Confirm</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_phone_number">Verify that it\'s you</string>
    <string name="we_have_sent_verification_code_to_the_phone_number">We have sent a verification code to the phone number</string>
    <string name="resendCode">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="resendCodeAfter">Resend Code after: %d</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="add_new_address">Add new address</string>
    <string name="set_default">Default</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="block">Block</string>
    <string name="floor">Floor</string>
    <string name="apartment">Apartment</string>
    <string name="select_address_on_map">Select Address On Map</string>
    <string name="other_details">Other Details</string>
    <string name="address_name_optional">Address Name (Optional)</string>
    <string name="governorate_required">Governorate (Required)</string>
    <string name="area_required">Area (Required)</string>
    <string name="street_required">Street (Required)</string>
    <string name="building">Building</string>
    <string name="additional_info">Additional Info</string>
    <string name="phone_number">Phone Number</string>
    <string name="set_as_default">Set as default</string>
    <string name="city_required">City (Required)</string>
    <string name="map">Map</string>
    <string name="normal">Normal Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">Point of Interest</string>
    <string name="permission_denied_explanation">App must access your location to proceed</string>
    <string name="select_this_address">Select this address</string>
    <string name="search_for_address">Search for Address</string>
    <string name="warning">Warning</string>
    <string name="check">Check</string>
    <string name="address_not_available">Address not available, try another</string>
    <string name="phone_required">Phone Number is required</string>
    <string name="area">Area</string>
    <string name="remove_address">Remove Address</string>
    <string name="cannot_delete_address">Can\'t delete address</string>
    <string name="default_address_error">This address is the default one, So it can\'t be deleted.</string>
    <string name="confirm_address_remove">Are you sure you want to remove that address ?</string>
    <string name="confirm_set_default_address">Are you sure you want to set that address as the default one ?</string>
    <string name="close">Close</string>
    <string name="set_default_address_error">This address is already a default address</string>
    <string name="request_permission">Request Permission</string>
    <string name="error_loading_current_location">Error while loading current location</string>
    <string name="products">Products</string>
    <string name="error_loading_subCategories">Error loading products.. try again ?</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="error_loading_products">Error during loading products..try again ?</string>
    <string name="product_details">Product Details</string>
    <string name="product_features">Product Features</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="delivery_details">Delivery can be regular or fast delivery</string>
    <string name="related_products">Related Products</string>
    <string name="add_evaluation">Add Evaluation</string>
    <string name="choose_your_medicine">Choose your medicine</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="order_number">Order Number:</string>
    <string name="order_time">Created At:</string>
    <string name="order_status">Order Status:</string>
    <string name="order_details">Order Details</string>
    <string name="reorder">Reorder</string>
    <string name="created_at_label">Created at:</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_method">Payment Method: </string>
    <string name="total">Total: </string>
    <string name="cart_price">Cart Price: </string>
    <string name="delivery_price">Delivery Price:</string>
    <string name="discount">Discount: </string>
    <string name="to_be_paid">To be Paid: </string>
    <string name="cancel_order">Cancel Order</string>
    <string name="confirm_reorder">Are you sure you want to reorder this one ?</string>
    <string name="quantity">Quantity:</string>
    <string name="confirm_cancel">Are you sure you want to cancel that order ?</string>
    <string name="address_type">Address Type</string>
    <string name="select_the_address_type">Select the address type</string>
    <string name="product_s">Product/s</string>
    <string name="select_payment_method">Select Payment method</string>
    <string name="shipping_method">Shipping Method: </string>
    <string name="summary">Summary</string>
    <string name="select_shipping_method">Select Shipping method: </string>
    <string name="create_order">Create Order</string>
    <string name="thank_you_for_ordering_from_us_order_created_successfully">Thank you for ordering from us, Order created successfully</string>
    <string name="return_to_my_orders_page">Return to My Orders page</string>
    <string name="no_orders_found">No Orders found</string>
    <string name="error_loading_orders">Error during loading orders, ..try again ?</string>
    <string name="confirm_create_order">Are you sure you want to create a new order ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="confirm_edit">Are you sure you want to confirm editing your account ?</string>
    <string name="lastname_error">Lastname is required</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="old_password">Old Password</string>
    <string name="old_password_required">Old Password is required</string>
    <string name="new_password_required">New Password required</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="my_prescription">Prescriptions</string>
    <string name="nursing_care">Nursing Care</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="please_confirm">Please confirm your password</string>
</resources>