<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A0B0B6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.authentication.signup.SignupActivity">

            <TextView
                android:id="@+id/signup_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/signup"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/customer_phone_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customer_lastname_layout"
                android:layout_marginTop="12dp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_phone"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:inputType="phone"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/customer_firstname_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_label"
                android:layout_marginTop="12dp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_firstname"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/customer_lastname_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customer_firstname_layout"
                android:layout_marginTop="12dp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_lastname"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/customer_email_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customer_phone_layout"
                android:layout_marginTop="12dp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_email"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/customer_username_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customer_email_layout"
                android:layout_marginTop="12dp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_username"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/customer_password_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/customer_username_layout"
                android:layout_marginTop="12dp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_password"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/customer_confirm_password_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customer_password_layout"
                android:layout_marginTop="12dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_confirm_password"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/create_new_button"
                app:layout_constraintTop_toBottomOf="@id/customer_confirm_password_layout"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:text="@string/create_new_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.9"
                android:padding="20dp" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/already_have_an_account_login"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_new_button"
                app:layout_constraintWidth_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>